fix div overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,4 +28,7 @@
   .leading-relaxed {
     @apply !text-gray-400;
   }
+  canvas {
+    @apply !max-h-screen;
+  }
 }
